tried some formatting

--- a/ntnu-24/index.html
+++ b/ntnu-24/index.html
@@ -51,7 +51,7 @@
   				height: 960,
 				center: true,
 				slideNumber: true,
-
+				center: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
