Added more content.

--- a/ntnu-24/index.html
+++ b/ntnu-24/index.html
@@ -16,30 +16,17 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown data-separator="^---" data-separator-vertical="^--">
-					## Slide1
-					Noe spennende
-
-					-- 
-					## Slide2 
-					Noe kjedelig
-
-					---
-					## Slide3
-					Enda litt til
-
-
-				</section>
-
 				<section data-markdown="md/01-introduction.md" data-separator="^---" data-separator-vertical="^--"></section>
 				<section data-markdown="md/02-hardware-hacking.md" data-separator="^---" data-separator-vertical="^--"></section>
 				<section data-markdown="md/03-a-professional-approach.md" data-separator="^---" data-separator-vertical="^--"></section>
+				<section data-markdown="md/04-law-enforcement-context.md" data-separator="^---" data-separator-vertical="^--"></section>
+				<section data-markdown="md/05-resources.md" data-separator="^---" data-separator-vertical="^--"></section>
 			</div>
 		</div>
 
 		<script src="dist/reveal.js"></script>
 		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
+		<script src="plugin/markdown/markdown.js"></script>	
 		<script src="plugin/highlight/highlight.js"></script>
 		<script>
 			// More info about initialization & config:
@@ -47,8 +34,8 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
-				width: 700,
-  				height: 960,
+				width: 1920,
+  				height: 1080,
 				center: true,
 				slideNumber: true,
 				center: true,
