Added all(or most) of the main topics.

--- a/ntnu-24/index.html
+++ b/ntnu-24/index.html
@@ -20,6 +20,9 @@
 				<section data-markdown="md/02-hardware-hacking.md" data-separator="^---" data-separator-vertical="^--"></section>
 				<section data-markdown="md/03-a-professional-approach.md" data-separator="^---" data-separator-vertical="^--"></section>
 				<section data-markdown="md/04-law-enforcement-context.md" data-separator="^---" data-separator-vertical="^--"></section>
+				<section data-markdown="md/05-fi-example.md" data-separator="^---" data-separator-vertical="^--"></section>
+				<section data-markdown="md/06-the-process.md" data-separator="^---" data-separator-vertical="^--"></section>
+				<section data-markdown="md/07-chip-hacking.md" data-separator="^---" data-separator-vertical="^--"></section>
 			</div>
 		</div>
 
