--- a/ntnu-24/index.html
+++ b/ntnu-24/index.html
@@ -20,9 +20,11 @@
 				<section data-markdown="md/02-law-enforcement-context.md" data-separator="^---" data-separator-vertical="^--"></section>
 				<section data-markdown="md/03-hardware-hacking.md" data-separator="^---" data-separator-vertical="^--"></section>
 				<section data-markdown="md/04-a-professional-approach.md" data-separator="^---" data-separator-vertical="^--"></section>
-				<section data-markdown="md/05-fi-example.md" data-separator="^---" data-separator-vertical="^--"></section>
-				<section data-markdown="md/06-the-process.md" data-separator="^---" data-separator-vertical="^--"></section>
+				<section data-markdown="md/05-the-process.md" data-separator="^---" data-separator-vertical="^--"></section>
+				<section data-markdown="md/06-fi-example.md" data-separator="^---" data-separator-vertical="^--"></section>
 				<section data-markdown="md/07-chip-hacking.md" data-separator="^---" data-separator-vertical="^--"></section>
+				<section data-markdown="md/08-some-random.md" data-separator="^---" data-separator-vertical="^--"></section>
+				<section data-markdown="md/09-conclusion.md" data-separator="^---" data-separator-vertical="^--"></section>
 			</div>
 		</div>
 
